[tool.poetry]
name = "scaling-happiness"
version = "0.1.0"
description = ""
authors = ["Amirouche <amirouche@hyper.dev>"]
license = "CC0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
bandit = "^1.7.2"
pylama = "^8.3.7"
black = "^22.1.0"
ipython = "^8.0.1"
pytest-cov = "^3.0.0"
pytest-randomly = "^3.11.0"
pytest-xdist = "^2.5.0"
jedi = "^0.18.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
