[tool.poetry]
name = "lbst"
version = "0.0.0"
description = "Immutable Log-Balanced Search Tree"
authors = ["Amirouche <amirouche@hyper.dev>"]
license = "CC0"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "*"
bandit = "*"
pylama = "*"
black = "*"
ipython = "*"
pytest-cov = "*"
pytest-randomly = "*"
pytest-xdist = "*"
jedi = "*"
flake8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
