[tool.poetry]
name = "leboost"
version = "0.3.0"
description = "Immutable sorted dictionary, and an immutable list"
authors = ["Amirouche <amirouche@hyper.dev>"]
license = "CC0"
readme = "README.md"
homepage = "https://github.com/amirouche/leboost"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "*"
bandit = "*"
pylama = "*"
black = "*"
ipython = "*"
pytest-cov = "*"
pytest-randomly = "*"
pytest-xdist = "*"
jedi = "*"
flake8 = "*"
termgraph = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
